syntax = "proto3";

package selenium.proto;

// Capabilities returned by WebDriver for a currently-running browser instance.
// NOTE: Different versions of Selenium - and different browser drivers - use slightly different property names.
// E.g., some use "platform" whereas others use "platformName".
// NOTE: The property names below are intentionally camelCase instead of snake_case
// because that's what Selenium uses.
// See https://github.com/SeleniumHQ/selenium/wiki/DesiredCapabilities
message RawCapabilities {
  //
  // Standardized properties for "desired" and "actual" capabilities.
  //

  // "chrome", "firefox", "safari", "MicrosoftEdge", "internet explorer"
  string browserName = 1;

  // Firefox / Windows returns: "60.0"
  // Edge / Windows returns:    "42.17134.1.0"
  // All other browsers return: `undefined`
  string browserVersion = 2;

  // Chrome / Windows returns:  "67.0.3396.62"
  // IE 11 / Windows returns:   "11"
  // All other browsers return: `undefined`
  string version = 3;

  // Chrome / Mac returns:      "Mac OS X"
  // Chrome / Windows returns:  "XP"
  // Edge / Windows returns:    "ANY"
  // All other browsers return: `undefined`
  string platform = 4;

  // Chrome / Mac returns:      "darwin"
  // Firefox / Windows returns: "windows_nt"
  // Edge / Windows returns:    "windows"
  // IE 11 / Windows returns:   "WINDOWS"
  // All other browsers return: `undefined`
  string platformName = 5;

  // Chrome / Mac returns:      "17.6.0"
  // Firefox / Windows returns: "10.0"
  // Edge / Windows returns:    "10"
  // All other browsers return: `undefined`
  string platformVersion = 6;

  //
  // CBT-specific extensions for "desired" capabilities.
  //

  // Human-friendly "description" for the automated test run. Displayed in the CBT Web UI.
  string name = 7;

  // Human-friendly "build number" for the automated test run. Displayed in the CBT Web UI.
  string build = 8;

  bool record_video = 9;
  bool record_network = 10;

  // Mobile-only. E.g., "Nexus 6P" or "iPhone 8 Simulator".
  string deviceName = 11;

  // Mobile-only. One of "portrait", "landscape".
  string deviceOrientation = 12;

  // Desktop-only. E.g.: "1366x768".
  string screenResolution = 13;
}
